@@ -1,3 +1,8 @@
+2009-02-16  Andreas Kirschbaum
+
+	* Change socket options: enable TCP_NODELAY, "shutdown" socket
+	before close.
+
 2009-02-15  Andreas Kirschbaum
 
 	* Add progress dialog while connecting to a server.
